--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@
   --dark-blue: hsl(223, 47%, 23%);
 }
 
+html {
+  font-size: 15px;
+}
+
 body {
   font-family: 'Red Hat Display', sans-serif;
   font-size: 16px;
@@ -16,6 +20,12 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-color: var(--pale-blue);
+/* centering main */
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 main {
